--- a/templates/compte.html.twig
+++ b/templates/compte.html.twig
@@ -1,5 +1,6 @@
 {%  include 'header.html.twig' %}
     {% form_theme form 'bootstrap_3_layout.html.twig' %}
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 
 <section class=" bg-image  route" style="background-image: url({{ asset("assets/img/overlay-bg.jpg") }})">
     <div class="overlay-mf"></div>
@@ -126,13 +127,13 @@
         </div>
     </div>
     <footer>
-        <div class="container">
+        <div class="container" style="color: black">
             <div class="row">
                 <div class="col-sm-12">
                     <div class="copyright-box">
                         <p class="copyright">&copy; Copyright <strong>FINDME</strong>. All Rights Reserved</p>
                         <div class="credits">
-                            Developed by <a href="https://bootstrapmade.com/">GALACTECH TEAM</a>
+                            Developed by GALACTECH TEAM
                         </div>
                     </div>
                 </div>
