--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,6 +4,7 @@
     <title>FIND ME ..</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <script src="https://kit.fontawesome.com/a9b4fa71fa.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <style>
 
     </style>
