--- a/templates/publication/post.html.twig
+++ b/templates/publication/post.html.twig
@@ -129,6 +129,8 @@
         }
     }
 </script>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+
 <body style="background-color: #E4F3F5">
 {#<div style="width: 500px;height: 500px" id="map"></div>#}
 <section id="work" class="portfolio-mf sect-pt4 route">
@@ -422,13 +424,13 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/photoswipe.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.1/photoswipe-ui-default.min.js"></script>
 <footer>
-    <div class="container">
+    <div class="container" style="color: black">
         <div class="row">
             <div class="col-sm-12">
                 <div class="copyright-box">
                     <p class="copyright">&copy; Copyright <strong>FINDME</strong>. All Rights Reserved</p>
                     <div class="credits">
-                        Developed by <a href="https://bootstrapmade.com/">GALACTECH TEAM</a>
+                        Developed by GALACTECH TEAM
                     </div>
                 </div>
             </div>
