--- a/templates/calcul/index.html.twig
+++ b/templates/calcul/index.html.twig
@@ -4,6 +4,7 @@
 <title>FIND ME ..</title>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <script src="https://kit.fontawesome.com/a9b4fa71fa.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script type="text/javascript">
@@ -14,15 +15,11 @@
             ['Task', 'Hours per Day'],
             ['Publications pas encore Résolus', {{ PostNotResolved }}],
             ['Publications Résolus', {{ totalPubsWithStatusR }}],
-
         ]);
-
-
         var options = {
             title: 'Repartition des publications',
             is3D: true,
         };
-
         var chart = new google.visualization.PieChart(document.getElementById('piechart_3d'));
         chart.draw(data, options);
     }
@@ -71,6 +68,19 @@
     <div id="donutchart" style="width: 800px; height: 500px;; margin-left: auto; margin-right: auto;"></div>
     <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
 </div>
-
+<footer>
+    <div class="container" style="color: black">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="copyright-box">
+                    <p class="copyright">&copy; Copyright <strong>FINDME</strong>. All Rights Reserved</p>
+                    <div class="credits">
+                        Developed by GALACTECH TEAM
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
