--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -19,6 +19,8 @@
     <link href="{{asset("assets/lib/lightbox/css/lightbox.min.css")}}" rel="stylesheet">
     <!-- Main Stylesheet File -->
     <link href=" {{asset("assets/css/style.css")}}" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+
 </head>
 
 <body id="page-top">
@@ -39,30 +41,31 @@
             {% if app.user %}
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link js-scroll active" href="{{ path('home') }}">Home</a>
+                    <a class="nav-link js-scroll active" href="{{ path('home') }}"><i class="fas fa-home"></i> Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll" href="{{ path('post') }}">Toutes les publications</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll" href="{{path('contact')}}">Contact</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link js-scroll" href="{{ path('calcul') }}">Statistique</a>
+                    <a class="nav-link js-scroll" href="{{path('contact')}}"><i class="far fa-comment-dots"></i> Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll" href="{{ path('modifiercompte') }}">Compte</a>
+                    <a class="nav-link js-scroll" href="{{ path('mespublication') }}">Mes Publications</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll" href="{{ path('app_logout') }}">déconnexion</a>
+                    <a class="nav-link js-scroll" href="{{ path('calcul') }}"><i class="fas fa-chart-line"></i> Statistique</a>
                 </li>
-
+                <li class="nav-item">
+                    <a class="nav-link js-scroll" href="{{ path('modifiercompte') }}"><i class="far fa-user"></i> Compte</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll" href="{{ path('app_logout') }}"><i class="fas fa-sign-out-alt"></i></a>
+                </li>
             </ul>
             {% else %}
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link js-scroll active" href="{{ path('home') }}">Home</a>
+                    <a class="nav-link js-scroll active" href="{{ path('home') }}"><i class="fas fa-home"></i> Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll" href="{{ path('post') }}">Toutes les publications</a>
