--- a/templates/publication/newpublication.html.twig
+++ b/templates/publication/newpublication.html.twig
@@ -39,6 +39,7 @@
 </head>
 <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDch6NmhxtcdIgcCRjZbblh5z16CK-a2Jo&callback=initMap&libraries=&v=weekly" defer></script>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 <body style="background-color: #E4F3F5">
 <div class="animated fadeIn carte ">
 <div class="card shadow p-3 mb-5 bg-white rounded   carte" style="width: 45%;   margin-left: auto;margin-top:10%;margin-right: auto;">
@@ -159,20 +160,17 @@
                {{ form_widget(form1.contenu_pub,{'attr':{'placeholder':'Ecrire quelque chose ici ..','class':'form-control','cols':'30','rows':'4'}}) }}
             </div>
             <br>
-                <div id="floating-panel">
+{#                <div id="floating-panel">#}
 {#                    <input onclick="clearMarkers();" type="button" value="Hide Markers" />#}
 {#                    <input onclick="showMarkers();" type="button" value="Show All Markers" />#}
-                    <input onclick="deleteMarkers();" type="button" value="Supprimer Markeur" />
-                </div>
-                <div id="map">
-
+{#                    <input onclick="deleteMarkers();" type="button" value="Supprimer Markeur" />#}
+{#                </div>#}
+                <div id="map" style="margin-left: 17px">
                 </div>
             </div>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <input   id="tableau1"  name="markers1" value="">
-        <input   id="tableau2"  name="markers2" value="">
-{#        <input type="button" value="Get Address" onclick="GetAddress()" />#}
-
+        <input  type="hidden" id="tableau1"  name="markers1" value="">
+        <input  type="hidden" id="tableau2"  name="markers2" value="">
         <div class="col">
                     <div style="margin-left: 80px">
                         <label for="upload" class="btn btn-light m-0 rounded-pill px-4">
