--- a/templates/publication/repost.html.twig
+++ b/templates/publication/repost.html.twig
@@ -1,4 +1,5 @@
 {% include 'header.html.twig' %}
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 <!doctype html>
 <html lang="en">
 <head>
@@ -131,14 +132,14 @@
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-<footer style="color: black">
-    <div class="container">
+<footer>
+    <div class="container" style="color: black">
         <div class="row">
             <div class="col-sm-12">
                 <div class="copyright-box">
                     <p class="copyright">&copy; Copyright <strong>FINDME</strong>. All Rights Reserved</p>
                     <div class="credits">
-                        Developed by <a href="#" style="color: black">GALACTECH TEAM</a>
+                        Developed by GALACTECH TEAM
                     </div>
                 </div>
             </div>
