--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -71,16 +71,13 @@
                     <a class="nav-link js-scroll" href="{{ path('post') }}">Toutes les publications</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll" href="{{ path('calcul') }}">Statistique</a>
+                    <a class="nav-link js-scroll" href="{{ path('calcul') }}"><i class="fas fa-chart-line"></i> Statistique</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll" href="{{ path('app_register') }}">Inscription</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll" href="{{ path('app_login') }}">connexion</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link js-scroll" href="#contact">Contact</a>
                 </li>
             </ul>
             {% endif %}
